# GridFinancing

./: .gitignore  README.md  pyproject.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml  gemini.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
data/: TYNDP2022_CBA_EU27_all-scenarios.xlsx  tyndp2024_project_sheets.xlsx
data/manual/: DATA_SOURCES.md  border_zone_map.csv  project_participants.csv  tso_credit_reference.csv
docs/: grid_policy_brief_citation_pack.md  grid_policy_brief_new_version.md  index.html  methodology.md  quantitative-assessment.md  who_pays_for_europes_grid_working_draft.md
notebooks/: financing_triage.ipynb
src/grid_financing/: __init__.py  calculations.py  classification.py  exports.py  loaders.py  source_registry.py
tests/: conftest.py  test_calculations.py  test_classification.py  test_exports.py  test_loaders.py
